# tellu-svn

trunk/: REALLY_READ_THIS
trunk/agent/: build.sh  pack.sh
trunk/agent/tellu-agent-noarch-3.0.0/: tellu-Unix-noarch.pl  tellu.conf
trunk/agent/tellu-agent-unix-3.0.0/: INSTALL  Makefile.in  application.c  config.c  config.h  configure  configure.in  declarations.h  defines.h  defines.h.in  disk.c  hal.c  hal.h  jip.c  jip.h  load.c  load.h  machine.c  memory.c  memory.h  message.c  network.c  network.h  node.c  node.h  param.h  processor.c  processor.h  services.c  services.h  software.c  software.h  structures.h  system.c  system.h  tellu.c  tellu.h  terminate.c  timer.c  user.c
trunk/agent/tellu-agent-windows-3.0.0/: AUTHOR  README  application.c  config.c  config.h  declarations.h  defines.h  disk.c  hal.c  hal.h  jip.c  jip.h  load.c  machine.c  memory.c  message.c  network.c  node.c  node.h  param.h  processor.c  processor.h  services.c  software.c  software.h  system.c  system.h  tellu-3.0.0.c  tellu-3.0.0.h  tellu-3.0.0.rc  tellu-3.0.0.sln  tellu-3.0.0.vcproj  terminate.c  timer.c  user.c
trunk/agent/tellu-agent-windows-3.0.0/Release/: tellu.conf  vc90.idb
trunk/server/: CHANGELOG  INSTALL  RESTART.sh  build.sh  flush_db.sql  pack.sh  tellu_db.sql
trunk/server/common/: banner.h  cmdline.c  cmdline.h  config.c  config.h  globines.h  jip.c  jip.h  network.c  node.c  node.h  pid.c  shm.c  shm.h  tellu.init.d  thread.c  timer.c  uid.c
trunk/server/telinfo/: Makefile.in  cmdline.c  cmdline.h  config.c  config.h  configure  configure.in  declarations.h  defines.h.in  messages.c  shm.c  telinfo.c
trunk/server/tellud/: Makefile.in  RESTART.sh  configure  configure.in  db_mysql.c  db_plain.c  declarations.h  defines.h.in  messages.c  rand.c  structures.h  tellud.c  tellud.conf  tellud.h  worker.c  worker.h
trunk/server/telmon/: Makefile.in  application.c  button.c  cmdline.c  cmdline.h  config.c  config.h  configure  configure.in  declarations.h  defines.h.in  export.c  export.h  fallback.h  history.c  history.h  home.c  image.c  image.h  messages.c  network.c  network.h  settings.c  settings.h  stat.c  structures.h  telmon.c  telmon.conf  telmon.h  terminate.c  window.c
trunk/server/telmond/: Makefile.in  RESTART.sh  configure  configure.in  db_mysql.c  db_plain.c  declarations.h  defines.h.in  messages.c  network.c  reply.c  structures.h  telmond.c  telmond.conf  telmond.h  worker.c  worker.h
trunk/server/telskind/: Makefile.in  RESTART.sh  application.c  configure  configure.in  db_ldap.c  db_mysql.c  db_plain.c  declarations.h  defines.h.in  messages.c  network.c  rand.c  reply.c  structures.h  telskind.c  telskind.conf  telskind.h  terminate.c  worker.c  worker.h  worker_access.c  worker_device.c  worker_faction.c  worker_file.c  worker_help.c  worker_log.c  worker_machine.c  worker_misc.c  worker_password.c  worker_peripheral.c  worker_port.c  worker_rgb.c  worker_service.c  worker_skingroup.c  worker_skinuser.c  worker_temp.c
trunk/skin/: CHANGELOG  INSTALL  LICENSE  install.sh  pack.sh
trunk/skin/cgi-bin/: TODO  TUTORIAL  access.lib  admin.js  admin.lib  admin.pl  admin_theme_preview.pl  chest.lib  console.lib  console.pl  device.js  device.lib  device.pl  device_c.pl  device_d.pl  device_d_edit.lib  device_d_popup.pl  device_e.pl  device_edit.lib  device_popup.pl  faction.js  faction.lib  faction.pl  faction_popup.pl  file.pl  help.lib  help.pl  item.lib  library.lib  login.pl  logout.pl  machine.js  machine.lib  machine.pl  machine_c.pl  machine_d.pl  machine_d_edit.lib  machine_d_popup.pl  machine_e.pl  machine_edit.lib  (+30 more)
trunk/skin/html/: index.html
trunk/skin/html/css/: print.css
trunk/skin/templates/Standard/: login.html  master.html  popup.html
trunk/skin/templates/Standard,_bigger/: master.html
trunk/skin/templates/Standard,_biggest/: login.html  master.html  popup.html
trunk/skin/templates/Standard,_smaller/: login.html  master.html
trunk/skin/templates/Standard,_smallest/: master.html  popup.html
trunk/skin/templates/Standard_monospace/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_monospace,_bigger/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_monospace,_biggest/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_monospace,_smaller/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_monospace,_smallest/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_sans/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_sans,_bigger/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_sans,_biggest/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_sans,_smaller/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_sans,_smallest/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_serif/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_serif,_bigger/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_serif,_biggest/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_serif,_smaller/: login.html  master.html  popup.html  preview.html
trunk/skin/templates/Standard_serif,_smallest/: login.html  master.html  popup.html  preview.html
trunk/web/: author.html  download.html  faq.html  index.html  installation.html  license.html  screenshots.html  updating.html
trunk/web/css/: default.css
(+64 files in other folders)
