AC_INIT(tellu, 3.0.0, jani@lasipalatsi.fi)

dnl
dnl Checks for programs.
dnl
AC_PROG_CC
AC_PROG_INSTALL
AC_LANG_C
AC_CHECK_PROGS(LN, ln)
AC_CHECK_PROGS(RM, rm)
AC_CHECK_PROGS(UNAME, uname)

dnl
dnl Check if compiler accepts -Wall.
dnl
AC_MSG_CHECKING([if compiler accepts -Wall])
SAVEDCFLAGS=$CFLAGS
CFLAGS=$CFLAGS" -Wall"
wall="no"
AC_LINK_IFELSE([AC_LANG_PROGRAM([], [])],
	[wall="yes"; SAVEDCFLAGS=$CFLAGS; efl=$efl" -Wall"])
AC_MSG_RESULT([$wall])
CFLAGS=$SAVEDCFLAGS

dnl
dnl Get parameters.
dnl
CFLAGS=$CFLAGS" -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/include/hal"

AC_ARG_WITH(dbus,
	[  --with-dbus=DIR         where DBus is installed],
	[CFLAGS=$CFLAGS" -I$withval/include/dbus-1.0 -I$withval/include/dbus-1.0/include -I$withval/lib/dbus-1.0/include"
		LDFLAGS=$LDFLAGS" -L$withval/lib"
		LIBS=$LIBS" -ldbus-1"])
AC_ARG_WITH(hal,
	[  --with-hal=DIR          where HAL is installed],
	[CFLAGS=$CFLAGS" -I$withval/include"
		LDFLAGS=$LDFLAGS" -L$withval/lib"
		LIBS=$LIBS" -lhal"])

dnl
dnl Checks for header files.
dnl
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h mntent.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/statvfs.h sys/systeminfo.h unistd.h])

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl
AC_TYPE_UID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

dnl
dnl Checks for library functions.
dnl
AC_FUNC_GETMNTENT
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gethostbyaddr gethostbyname gethostname getmntent inet_ntoa memset select socket strchr strerror strncasecmp strrchr sysinfo uname])

dnl
dnl Checks for libraries.
dnl
AC_CHECK_LIB([dbus-1], [dbus_bus_get],
	[],
	AC_MSG_ERROR(tellu requires DBus))
AC_CHECK_LIB([hal], [libhal_ctx_new],
	[],
	AC_MSG_ERROR(tellu requires HAL))

dnl
dnl Force some mandatory libraries.
dnl
LIBS=$LIBS" -lc"

dnl
dnl Output Makefiles.
dnl
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
